js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-await-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
{
await
typeof
import
.
source
.
UNKNOWN
}
)
;
